Run Geant with an extra EventAction and RunAction which do nothing.
Next have them write an empty root file.

--- a/Examples/Algorithms/Geant4/CMakeLists.txt
+++ b/Examples/Algorithms/Geant4/CMakeLists.txt
@@ -14,6 +14,7 @@ set(ACTS_EXAMPLES_G4SOURCES
 if (ACTS_BUILD_EXAMPLES_DD4HEP)
     list(APPEND ACTS_EXAMPLES_G4SOURCES src/DDG4DetectorConstruction.cpp)
     list(APPEND ACTS_EXAMPLES_G4SOURCES src/RootEventAction.cpp)
+    list(APPEND ACTS_EXAMPLES_G4SOURCES src/RootRunAction.cpp)
 endif()
 
 add_library(
